Added power hotkeys

--- a/mdm.conf
+++ b/mdm.conf
@@ -10,3 +10,8 @@ session=abb2bf
 password=ffffff
 error=e06c75
 info=98c379
+
+# Hotkey configuration (F1-F12 supported)
+suspend_hotkey=F3
+shutdown_hotkey=F4
+reboot_hotkey=F5
