Added Power Hotkeys display

--- a/mdm.conf
+++ b/mdm.conf
@@ -10,8 +10,12 @@ session=abb2bf
 password=ffffff
 error=e06c75
 info=98c379
+power_hotkeys=abb2bf
 
 # Hotkey configuration (F1-F12 supported)
 suspend_hotkey=F3
 shutdown_hotkey=F4
 reboot_hotkey=F5
+
+# Show power hotkey hints on screen (true/false)
+show_power_hotkeys=true
